; ModuleID = '/home/carl/AnghaBench/lab/engine/code/tools/lcc/src/extr_types.c_ttob.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/tools/lcc/src/extr_types.c_ttob.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }
%struct.TYPE_9__ = type { i32 }
%struct.TYPE_8__ = type { i32 }
%struct.TYPE_6__ = type { i32, i32, %struct.TYPE_6__* }

@voidptype = common dso_local global %struct.TYPE_7__* null, align 8
@funcptype = common dso_local global %struct.TYPE_9__* null, align 8
@inttype = common dso_local global %struct.TYPE_8__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ttob(%struct.TYPE_6__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_6__*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %3, align 8
  %4 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %5 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 8
  switch i32 %6, label %40 [
    i32 138, label %7
    i32 128, label %7
    i32 266, label %7
    i32 129, label %12
    i32 134, label %12
    i32 130, label %12
    i32 136, label %12
    i32 133, label %21
    i32 135, label %27
    i32 139, label %33
    i32 132, label %33
    i32 131, label %33
    i32 137, label %34
  ]

7:                                                ; preds = %1, %1, %1
  %8 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 2
  %10 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %11 = call i32 @ttob(%struct.TYPE_6__* %10)
  store i32 %11, i32* %2, align 4
  br label %42

12:                                               ; preds = %1, %1, %1, %1
  %13 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @sizeop(i32 %18)
  %20 = add nsw i32 %15, %19
  store i32 %20, i32* %2, align 4
  br label %42

21:                                               ; preds = %1
  %22 = load %struct.TYPE_7__*, %struct.TYPE_7__** @voidptype, align 8
  %23 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @sizeop(i32 %24)
  %26 = add nsw i32 133, %25
  store i32 %26, i32* %2, align 4
  br label %42

27:                                               ; preds = %1
  %28 = load %struct.TYPE_9__*, %struct.TYPE_9__** @funcptype, align 8
  %29 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = call i32 @sizeop(i32 %30)
  %32 = add nsw i32 133, %31
  store i32 %32, i32* %2, align 4
  br label %42

33:                                               ; preds = %1, %1, %1
  store i32 132, i32* %2, align 4
  br label %42

34:                                               ; preds = %1
  %35 = load %struct.TYPE_8__*, %struct.TYPE_8__** @inttype, align 8
  %36 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = call i32 @sizeop(i32 %37)
  %39 = add nsw i32 134, %38
  store i32 %39, i32* %2, align 4
  br label %42

40:                                               ; preds = %1
  %41 = call i32 @assert(i32 0)
  store i32 134, i32* %2, align 4
  br label %42

42:                                               ; preds = %40, %34, %33, %27, %21, %12, %7
  %43 = load i32, i32* %2, align 4
  ret i32 %43
}

declare dso_local i32 @sizeop(i32) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
